tests/gabc-dump/should-fail/bad-slur.gabc
name: bad slur;
%%
(c4) (;[oslur:1;5mm,3mm]) (::)
